# project-zer

./: .containerappignore  .env  .env.example  .gitignore  ALL_SERVICES_FINAL_FIXES.md  CHANGELOG.md  COMPLETE_FINAL.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STRATEGY_FINAL.md  Dockerfile  ENDPOINT_TEST_REPORT.md  FEATURE_BUILD_STATUS.md  FINAL_STATUS.md  Makefile  Models.py  PHASE_1_2_COMPLETE_READY_FOR_PHASE_3.md  PHASE_1_2_COMPLETION_SUMMARY.md  PHASE_1_2_DELIVERY_COMPLETE.md  PHASE_1_2_TEST_RESULTS.md  PHASE_1_7_IMPLEMENTATION_COMPLETE.md  POSTMAN_FINAL_STATUS.md  QUICK_START.md  QUICK_START_PHASE_1_2.md  QUICK_TEST_COMMANDS.sh  README.md  README_START_HERE.md  README_v2.md  RUN_ALL9.sh  SETUP_NEW_SYSTEM.md  Schemas.py  TABLE_OWNERSHIP.md  WORKER_ARCHITECTURE_DECISION.md  ZeroQue_API_Collection.postman_collection.json  ZeroQue_Clean.postman_collection.json  ZeroQue_Complete.postman_collection.json  ZeroQue_Complete_TestReady.postman_collection.json  ZeroQue_Environment.postman_environment.json  ZeroQue_Services.BACKUP.json  alembic.ini  api_testing_guide.md  (+83 more)
project-zer-supply-v2/: .dockerignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  mkdocs.yml  pyproject.toml  runtime_demo.sqlite
project-zer-supply-v2/alembic/: env.py
project-zer-supply-v2/deploy/: docker-compose.services.yml
project-zer-supply-v2/docs/: business-scenarios.md  complete-rebuild-blueprint.md  opa-policy-guide.md  openapi.json  production-rollout.md  supply-v2-architecture.drawio  supply-v2-dispute-auth-flow.drawio
project-zer-supply-v2/scripts/: azure_email_send.py  build_docs_site.py  (+10 more)
(+1332 files in other folders)
