[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "project-zer-supply-v2"
version = "0.1.0"
description = "Order-driven procurement and fulfilment MVP"
requires-python = ">=3.11"
dependencies = ["fastapi>=0.115", "sqlalchemy>=2.0", "alembic>=1.13", "uvicorn>=0.30", "psycopg2-binary>=2.9"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]
azure = ["azure-servicebus>=7.13", "azure-communication-email>=1.0", "azure-monitor-opentelemetry>=1.6", "PyJWT>=2.9", "cryptography>=42"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
